--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: scala
 addons:
   chrome: stable
 jdk:
-  - oraclejdk8
-dist: trusty
+  - openjdk11
+dist: bionic
 scala:
-  - 2.12.10
+  - 2.12.11
   - 2.11.12
   - 2.13.1
-  - 0.23.0
+  - 0.24.0
 before_cache:
   - du -h -d 1 $HOME/.ivy2/
   - du -h -d 2 $HOME/.sbt/
@@ -31,5 +31,5 @@ before_script:
   - mkdir -p chromedriver && unzip chromedriver_linux64.zip -d chromedriver/
   - export PATH="$PATH:$PWD/chromedriver/"
 script:
-  - if [[ ($TRAVIS_JDK_VERSION = "oraclejdk8") ]]; then sbt ++$TRAVIS_SCALA_VERSION rootJVM/test && xvfb-run sbt ++$TRAVIS_SCALA_VERSION rootJS/test; fi
-  - if [[ ($TRAVIS_JDK_VERSION = "oraclejdk8") && ($TRAVIS_SCALA_VERSION =~ ^2.11.*) ]]; then sbt rootNative/test; fi
+  - sbt ++$TRAVIS_SCALA_VERSION rootJVM/test && xvfb-run sbt ++$TRAVIS_SCALA_VERSION rootJS/test
+  - if [[ ($TRAVIS_SCALA_VERSION =~ ^2.11.*) ]]; then sbt rootNative/test; fi
