--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ cache:
     - $HOME/.sbt/launchers
     - $HOME/.ivy2/cache
     - $HOME/.coursier
+before_install:
+  - if [[ $TRAVIS_SCALA_VERSION =~ ^2.11.* ]]; then bash project/travis_setup.sh; fi
 before_script:
   - nvm install 10 # nodejs < 10 fails finding URL class
   - version="$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)" &&
