--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,8 @@
-image: softwaremill/sbt-jenkins:8u212-b04-jdk
+image: openjdk:8
 vscode:
   extensions:
     - scala-lang.scala@0.3.9:kklqw+c/dNRmtTU8B5repw==
-    - scalameta.metals@1.7.8:oixMSF1r3cXQPfOQ34+sTA==
+    - scalameta.metals@1.9.0:PtE/gdeE1YPL6It4tEfqpg==
+tasks:
+  - init: source ./gitpod_init.sh
+  - command: source ./gitpod_command.sh
