--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ cache:
     - $HOME/.ivy2/cache
     - $HOME/.coursier
 before_install:
-  - if [[ $TRAVIS_SCALA_VERSION =~ ^2.11.* ]]; then bash project/travis_setup.sh; fi
+  - project/travis_setup.sh
+  - export STTP_NATIVE=1
 before_script:
   - nvm install 10 # nodejs < 10 fails finding URL class
   - version="$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)" &&
