--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ cache:
     - $HOME/.ivy2/cache
     - $HOME/.coursier
 before_install:
-  - project/travis_setup.sh
+  - bash project/travis_setup.sh
   - export STTP_NATIVE=1
 before_script:
   - nvm install 10 # nodejs < 10 fails finding URL class
