--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       STTP_NATIVE: 1
+      JAVA_OPTS: -Xmx4G
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -48,6 +49,7 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       STTP_NATIVE: 1
+      JAVA_OPTS: -Xmx4G
     steps:
       - name: Checkout
         uses: actions/checkout@v2
