Pin scala3-library_sjs1 to 3.3.x

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -4,5 +4,6 @@ updates.ignore = [
   {groupId = "org.scala-lang", artifactId = "scala-compiler", version = "3."}
 ]
 updates.pin = [
-  {groupId = "org.scala-lang", artifactId = "scala3-library", version = "3.3."}
+  {groupId = "org.scala-lang", artifactId = "scala3-library", version = "3.3."},
+  {groupId = "org.scala-lang", artifactId = "scala3-library_sjs1", version = "3.3."}
 ]
