--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,8 @@
-runner.dialect = scala3
+runner.dialect = scala213
 version = 3.8.2
 maxColumn = 120
+fileOverride {
+  "glob:**/scala-3/**" {
+    runner.dialect = scala3
+  }
+}
