--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -7,22 +7,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  scala-steward:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 11
-          cache: 'sbt'
-      - name: Launch Scala Steward
-        uses: scala-steward-org/scala-steward-action@v2
-        with:
-          author-name: scala-steward
-          author-email: scala-steward
-          github-token: ${{ secrets.REPO_GITHUB_TOKEN }}
-          repo-config: .scala-steward.conf
-          ignore-opts-files: false
+  call-workflow-scala-steward:
+    uses: softwaremill/github-actions-workflows/.github/workflows/scala-steward.yml@main
+    with:
+      java-version: '11'
+    secrets:
+      repo-github-token: ${{secrets.REPO_GITHUB_TOKEN}}
