--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     branches: ['**']
     tags: [v*]
 jobs:
-  call-workflow-build-scala:
+  build-scala:
     uses: softwaremill/github-actions-workflows/.github/workflows/build-scala.yml@main
     # run on 1) push, 2) external PRs, 3) softwaremill-ci PRs
     # do not run on internal, non-steward PRs since those will be run by push to branch
@@ -15,12 +15,11 @@ jobs:
       github.event.pull_request.head.repo.full_name != github.repository ||
       github.event.pull_request.user.login == 'softwaremill-ci'
     with:
-      java-version: '11'
       java-opts: '-Xmx4G'
       sttp-native: 1
       install-libidn2: true
 
-  call-workflow-mima:
+  mima:
     uses: softwaremill/github-actions-workflows/.github/workflows/mima.yml@main
     # run on 1) push, 2) external PRs, 3) softwaremill-ci PRs
     # do not run on internal, non-steward PRs since those will be run by push to branch
@@ -29,26 +28,24 @@ jobs:
       github.event.pull_request.head.repo.full_name != github.repository ||
       github.event.pull_request.user.login == 'softwaremill-ci'
     with:
-      java-version: '11'
       java-opts: "-Xmx4G"
 
-  call-workflow-publish-release:
+  publish-release:
     uses: softwaremill/github-actions-workflows/.github/workflows/publish-release.yml@main
-    needs: [call-workflow-build-scala]
+    needs: [build-scala]
     if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
     secrets: inherit
     with:
-      java-version: '11'
       java-opts: "-Xmx4G"
       sttp-native: 1
 
-  call-workflow-label:
+  label:
     # only for PRs by softwaremill-ci
     if: github.event.pull_request.user.login == 'softwaremill-ci'
     uses: softwaremill/github-actions-workflows/.github/workflows/label.yml@main
 
-  call-workflow-auto-merge:
+  auto-merge:
     # only for PRs by softwaremill-ci
     if: github.event.pull_request.user.login == 'softwaremill-ci'
-    needs: [ call-workflow-build-scala, call-workflow-mima, call-workflow-label ]
+    needs: [ build-scala, mima, label ]
     uses: softwaremill/github-actions-workflows/.github/workflows/auto-merge.yml@main
