workflow names refactor

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     branches: ['**']
     tags: [v*]
 jobs:
-  build-scala:
+  build:
     uses: softwaremill/github-actions-workflows/.github/workflows/build-scala.yml@main
     # run on 1) push, 2) external PRs, 3) softwaremill-ci PRs
     # do not run on internal, non-steward PRs since those will be run by push to branch
@@ -30,9 +30,9 @@ jobs:
     with:
       java-opts: "-Xmx4G"
 
-  publish-release:
+  publish:
     uses: softwaremill/github-actions-workflows/.github/workflows/publish-release.yml@main
-    needs: [build-scala]
+    needs: [build]
     if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
     secrets: inherit
     with:
@@ -47,5 +47,5 @@ jobs:
   auto-merge:
     # only for PRs by softwaremill-ci
     if: github.event.pull_request.user.login == 'softwaremill-ci'
-    needs: [ build-scala, mima, label ]
+    needs: [ build, mima, label ]
     uses: softwaremill/github-actions-workflows/.github/workflows/auto-merge.yml@main
